<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="color"
            type="com.codebrew.clikat.utils.configurations.ColorConfig" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:background="@{color.appBackground}">

        <TextView
            android:id="@+id/payment_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/proximanovasemibold"
            android:text="@string/payment_details"
            android:textSize="@dimen/text_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textcolor="@{color.textHead}" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/proximanovaregular"
            android:text="@string/email_tag"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_detail"
            app:textcolor="@{color.textSubhead}" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/proximanovaregular"
            android:text="@string/phoneno_tag"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            app:textcolor="@{color.textSubhead}" />

        <Button
            android:id="@+id/btn_choose_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/choose_payment_receipt_to_upload"
            android:textColor="@color/white"
            app:icon="@drawable/ic_file_upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:textcolor="@{color.appBackground}" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            app:background="@{color.divider}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_doc" />

        <ImageView
            android:id="@+id/iv_doc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_04"
            android:scaleType="fitCenter"
            app:layout_constraintDimensionRatio="1:0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone"
            app:srcCompat="@drawable/iv_placeholder" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>